# numericalCalculater

./: CMakeLists.txt  readme.md
cmake/: Dependencies.cmake
decodeVideo/: main.cpp
docs/: algorithms.md  build_and_run.md
numericalCalculater/: CommonTools.h  numericalCalculater.cpp  numericalCalculater.h  numericalCalculater.vcxproj  numericalCalculaterDlg.h
scripts/: build.bat  install.bat  run.bat
src/app/: AboutDlg.cpp  AboutDlg.h  CMakeLists.txt  MainDlg.cpp  MainDlg.h  MatDisplay.cpp  MatDisplay.h  app.cpp  app.h  app.rc  framework.h  resource.h  version.rc.in
src/numcalc/: CMakeLists.txt  nc_ann.cpp  nc_cnn.cpp  nc_knn.cpp  nc_logistic.cpp  nc_matrix.cpp  nc_plot.cpp  nc_plot.h  nc_probability.cpp  nc_result.h  nc_statistics.cpp  nc_version.h.in  nc_yuv.cpp  numcalc.h
tests/: CMakeLists.txt  test_numcalc.cpp
